--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,27 +6,27 @@
 }
 
 .page-1 {
-	background-image: url('../images/bg.png') !important;
+	background-image: url('../bg.png') !important;
 }
 
 .page-2 {
-	background-image: url('../images/collage_2.png') !important;
+	background-image: url('../collage_2.png') !important;
 }
 
 .page-3 {
-	background-image: url('../images/contact.png') !important;
+	background-image: url('../contact.png') !important;
 }
 
 .page-4 {
-	background-image: url('../images/bg.png') !important;
+	background-image: url('../bg.png') !important;
 }
 
 .page-5 {
-	background-image: url('../images/box.jpg') !important;
+	background-image: url('../box.jpg') !important;
 }
 
 .page-6 {
-	background-image: url('../images/collage_2.png') !important;
+	background-image: url('../collage_2.png') !important;
 }
 
 
