--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,23 +6,23 @@
 }
 
 .page-1 {
-	background-image: url('../bg.png') !important;
+	background-image: url('../SWD1.png') !important;
 }
 
 .page-2 {
-	background-image: url('../collage_2.png') !important;
+	background-image: url('../SWD2.png') !important;
 }
 
 .page-3 {
-	background-image: url('../contact.png') !important;
+	background-image: url('../SWD3.png') !important;
 }
 
 .page-4 {
-	background-image: url('../bg.png') !important;
+	background-image: url('../WABI1.jpg') !important;
 }
 
 .page-5 {
-	background-image: url('../box.jpg') !important;
+	background-image: url('../WABI2.jpg') !important;
 }
 
 .page-6 {
