--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,10 +25,10 @@
 	background-image: url('../WABI2.jpg') !important;
 }
 
-.page-6 {
+/* .page-6 {
 	background-image: url('../collage_2.png') !important;
 }
-
+ */
 
 
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
