--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,7 @@
 }
 
 .page-1 {
-	background-image: url('../SWD1.png') !important;
+	background-image: url('../CBD1.png') !important;
 }
 
 .page-2 {
