--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,7 @@
 }
 
 .page-1 {
-	background-image: url('../ABD1.png') !important;
+	background-image: url('../KENJIQ.png') !important;
 }
 
 .page-2 {
