--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,11 +6,11 @@
 }
 
 .page-1 {
-	background-image: url('../KENJIQ.png') !important;
+	background-image: url('../peak.png') !important;
 }
 
 .page-2 {
-	background-image: url('../SWD2.png') !important;
+	background-image: url('../bakajik.jpg') !important;
 }
 
 .page-3 {
