--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,7 +22,7 @@
 }
 
 .page-5 {
-	background-image: url('../canba.jpg') !important;
+	background-image: url('../canba.png') !important;
 }
 
 /* .page-6 {
