--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,7 +14,7 @@
 }
 
 .page-3 {
-	background-image: url('../SWD3.png') !important;
+	background-image: url('../cang.png') !important;
 }
 
 .page-4 {
