--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 .page-4 {
-	background-image: url('../WABI1.jpg') !important;
+	background-image: url('../banena.jpg') !important;
 }
 
 .page-5 {
