--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -52,7 +52,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
+	position: relative;
 	z-index: 10000;
 }
 .menu ul {
@@ -69,10 +69,12 @@ body {
 }
 .top-menu {
 	top: 0;
+	position: fixed;
 	z-index: 10000;
 }
 .bottom-menu {
 	bottom: 0;
+	position: fixed;
 }
 .bottom-menu ul {
 	display: none;
